# MSHread

./: CMakeLists.txt  README.md
.CythonCMake/: UseCython.cmake
example/: CMakeLists.txt  example.cpp  example2.py  mesh_ex.msh
include/: mesh.h  mesh_type.pxd  py_mesh.pxd  reader.h
src/: mesh.cpp  py_mesh.pyx  reader.cpp
